Updated CSS, avoid invisible text during font loading

--- a/source/berlin/berlin.css
+++ b/source/berlin/berlin.css
@@ -10,18 +10,21 @@ html, body, div, form, pre, span, tr, th, td, img {
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 300;
+    font-display: swap;
     src: url(berlin-opensans-light.woff) format("woff");
 }
 @font-face {
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
     src: url(berlin-opensans-regular.woff) format("woff");
 }
 @font-face {
     font-family: "Open Sans";
     font-style: normal;
     font-weight: 700;
+    font-display: swap;
     src: url(berlin-opensans-bold.woff) format("woff");
 }
 body {
