--- a/source/fontawesome/fontawesome.css
+++ b/source/fontawesome/fontawesome.css
@@ -4,6 +4,7 @@
     font-family: "FontAwesome";
     font-style: normal;
     font-weight: normal;
+    font-display: block;
     src: url("fontawesome.woff");
 }
 .fa {
